clusters/production/media/tautulli/tautulli-release.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: tautulli
        securityContext:
          allowPrivilegeEscalation: false
        image: ghcr.io/tautulli/tautulli:v2.18.2 # {"$imagepolicy": "flux-system:tautulli"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8181
        startupProbe:
          tcpSocket:
            port: 8181
          failureThreshold: 60
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8181
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 8181
          periodSeconds: 10
        resources:
          requests:
            cpu: "50m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "512Mi"
        volumeMounts:
        - name: tautulli-config
          mountPath: /config
      volumes:
      - name: tautulli-config
        persistentVolumeClaim:
          claimName: pvc-tautulli-config
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: media
  labels:
    app: tautulli
spec:
  selector:
    app: tautulli
  ports:
  - name: tautulli
    port: 8181
    targetPort: 8181
  type: ClusterIP
