clusters/production/media/tautulli/tautulli-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli
  namespace: default
spec:
  parentRefs:
  - name: internal
    namespace: gateway
    sectionName: https
  hostnames:
  - tautulli.rees.ca
  rules:
  - backendRefs:
    - name: tautulli
      port: 8181
