clusters/production/media/tautulli/tautulli-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli-ingress
  namespace: default
spec:
  ingressClassName: internal-nginx  
  rules:
  - host: "tautulli.rees.ca"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tautulli
            port:
              number: 8181
